# Kaggle_Store_Sales_Forecasting

./: .gitignore  LICENSE  README.md  jupytext.toml  pyproject.toml
.superpowers/sdd/: task-7-report.md
configs/: default.yaml  final.yaml
configs/experiments/: 000_last_value.yaml  001_seasonal_naive_7.yaml  002_seasonal_naive_14.yaml  (+12 more)
docs/: kaggle_public_scores.md
notebooks/: 01_data_understanding.ipynb  01_data_understanding.py  02_baseline_and_feature_design.ipynb  02_baseline_and_feature_design.py  03_model_analysis.ipynb  03_model_analysis.py  04_final_results.ipynb  04_final_results.py  kaggle_cb_hpo_multiseed_submission.ipynb  kaggle_cb_hpo_multiseed_submission.py  kaggle_cb_joint_fs_hpo_submission.ipynb  kaggle_cb_joint_fs_hpo_submission.py  kaggle_lgbm_hpo_multiseed_submission.ipynb  kaggle_lgbm_hpo_multiseed_submission.py  kaggle_lgbm_joint_fs_hpo_submission.ipynb  kaggle_lgbm_joint_fs_hpo_submission.py  kaggle_xgb_hpo_multiseed_submission.ipynb  kaggle_xgb_hpo_multiseed_submission.py  kaggle_xgb_joint_fs_hpo_submission.ipynb  kaggle_xgb_joint_fs_hpo_submission.py
scripts/: blend_oof.py  evaluate.py  multi_seed.py  predict.py  prepare_data.py  stress_test.py  train.py  tune.py
tests/: conftest.py  test_artifacts_env.py  test_baselines.py  test_blend.py  test_clean_oil_ffill.py  test_data_validate.py  test_feature_point_in_time.py  test_final_eval.py  test_gbdt.py  test_lgbm_train_prep.py  test_metrics.py  test_nested_hpo_split.py  test_outlier_policy.py  test_predict_load_models.py  test_splits_no_leakage.py  test_stress.py  test_submission_schema.py
(+40 files in other folders)
