[project]
name = "store-sales"
version = "0.1.0"
description = "Kaggle Store Sales time series forecasting"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "pandas>=2.2",
  "numpy>=1.26",
  "pyarrow>=15.0",
  "scikit-learn>=1.5",
  "lightgbm>=4.3",
  "catboost>=1.2",
  "xgboost>=2.0",
  "optuna>=3.6",
  "PyYAML>=6.0",
  "matplotlib>=3.8",
  "seaborn>=0.13",
  "jupyter>=1.0",
  "ipykernel>=6.29",
]

[project.optional-dependencies]
dev = ["pytest>=8.0", "ruff>=0.5"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/store_sales"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[dependency-groups]
dev = [
    "jupytext>=1.19.4",
    "nbconvert>=7.17.1",
]
